--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "react-intl": "^6.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -29,7 +30,7 @@
     "vite": "^4.4.5"
   },
   "peerDependencies": {
-      "react": "^17.0.0 || ^18.0.0",
-      "react-dom": "^17.0.0 || ^18.0.0"
-    }
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
+  }
 }
